# bumpguard-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-registry.yml  release.yml
assets/: demo.py  logo.py
docs/: ADD_A_PROVIDER.md
src/bumpguard/: __init__.py  server.py
src/bumpguard/core/: __init__.py  analyze.py  diff.py  models.py  registry.py  service.py
src/bumpguard/providers/: base.py
src/bumpguard/providers/dotnet/: helper.py  nuget.py  provider.py
src/bumpguard/providers/dotnet/extractor/: Extractor.csproj  Program.cs  UsageScanner.cs
src/bumpguard/providers/java/: classfile.py  maven.py  provider.py  usage.py
src/bumpguard/providers/python/: fetch.py  provider.py  surface.py  usage.py
tests/: conftest.py  test_analyze.py  test_callcompat.py  test_diff.py  test_dotnet.py  test_java.py  test_provider.py  test_surface.py  test_surface_dynamic.py  test_usage.py
tests/fixtures/pkgv1/acme/: __init__.py  core.py
tests/fixtures/pkgv2/acme/: __init__.py  core.py
