[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bumpguard-mcp"
version = "0.2.1"
description = "Guard your dependency bumps: an MCP server that tells your AI agent exactly which parts of YOUR code break when you upgrade a dependency, and verifies AI-written code against the API that's actually installed — by static analysis, never by running third-party code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BumpGuard contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "dependencies",
    "upgrade",
    "breaking-changes",
    "hallucination",
    "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/appcreationsca/bumpguard-mcp"
Issues = "https://github.com/appcreationsca/bumpguard-mcp/issues"

[project.scripts]
bumpguard-mcp = "bumpguard.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bumpguard"]

# Ship the .NET extractor sources (built on first use); never ship build output.
[tool.hatch.build.targets.wheel.force-include]
"src/bumpguard/providers/dotnet/extractor/Program.cs" = "bumpguard/providers/dotnet/extractor/Program.cs"
"src/bumpguard/providers/dotnet/extractor/UsageScanner.cs" = "bumpguard/providers/dotnet/extractor/UsageScanner.cs"
"src/bumpguard/providers/dotnet/extractor/Extractor.csproj" = "bumpguard/providers/dotnet/extractor/Extractor.csproj"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
